# SynapseCode

./: .dockerignore  .env.example  .gitattributes  .gitignore  .safety-policy.yml  CHANGELOG.md  CONFIGURAR_WORKER.md  CONTRIBUTING.md  DEPLOY_COMPLETE.md  Dockerfile.master  Dockerfile.worker  ESTADO_ACTUAL_SESION.md  Escritorio_Dinamico.rdp  GITHUB_SETUP.md  HISTORY.md  INFORME_ESTADO_PROYECTO.md  INFORME_TECNICO.md  INSTALACION_AUTOMATICA_OPTIMIZACION.bat  INSTALL_COMPLETE.bat  INSTRUCCIONES_OPTIMIZACION_WORKER.md  LICENSE  MANUAL_USUARIO.md  Manual_de_Uso_Master.md  PROPUESTAS_IA_ALTA_CAPACIDAD.md  PROPUESTA_WEB_AGENT_20260503_1444.md  README.md  REDUCTIO_ABSURDUM_INTEGRATION.md  RELEASE_NOTES_v2.1.0-20260503.md  ROADMAP_MEJORAS_FUTURAS.md  SECURITY.md  SNAPSHOT_20260503.md  SUPABASE_SETUP.md  SynapseDashboard.py  SynapseDashboard.spec  SynapseIA_Plan_Mejora_Completo.docx  WORKFLOW_LOCAL.md  backend_log.txt  battery_final.txt  check_db.py  check_health.bat  (+71 more)
.github/: pull_request_template.md
RedSynapse/: .env.example  README.md
archivos_modificados/: rdp_manager.py  system.py
backend/: __init__.py  config.py  logging_config.py  main.py  pre_startup_check.py  requirements.txt
data/: synapse.db.backup
deploy/: nginx_synapsecode.conf
desktop/: package-lock.json  package.json
docker/: Dockerfile.master  Dockerfile.worker
docs/: ANALYTICS_QUERIES.md  INFORME_PROXIMOS_PASOS_2026-05-16.md  ROADMAP.md  TEST_REPORT_2026-05-16.md  troubleshooting.md
frontend/: .eslintrc.cjs  admin.html  all-debates.html  index.html  package-lock.json  package.json  serve.cjs  (+2 more)
(+222 files in other folders)
